Update# webpack build results goes to vue/*.(css|js), no longer include version strings, so it could be easily referenced in template with static tag

--- a/files/templates/load-vue.html
+++ b/files/templates/load-vue.html
@@ -1,4 +1,13 @@
 {% extends 'core/index.html' %}
+{% load staticfiles %}
+
+{% block headers %}
+	<link rel="stylesheet" href="{% static 'vue/app.css' %}" />
+{% endblock %}
 {% block content_block %}
 <p>this is load-vue</p>
+<app></app>
+{% endblock %}
+{% block scripts %}
+<script type="text/javascript" src="{% static 'vue/app.js' %}" />
 {% endblock %}
