--- a/fengyuan/templates/core/index.html
+++ b/fengyuan/templates/core/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="Get Feng Yuan https://github.com/pellaeon/fengyuan" />
 	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/meyer-reset.min.css' %}" />
 {% block headers %}
 {% endblock %}
 </head>
