Add# vue: main-content, empty filelist. Now Global navbar and vue app can work in harmony

--- a/files/frontend/static/scss/partials/_vars.scss
+++ b/files/frontend/static/scss/partials/_vars.scss
@@ -30,7 +30,7 @@ $fontWeight_UltraThin: 100;
 $fontWeight_Thin: 300;
 $fontWeight_Normal: 500;
 
-$headerHeight: 48px;
+$headerHeight: 45px;// according to fengyuan #main-header height
 $footerHeight: 64px;
 $footerHeightMobile: 74px;
 $mainHeadingHeight: 64px;
