files: support font-awesome

--- a/files/templates/load-vue.html
+++ b/files/templates/load-vue.html
@@ -3,6 +3,7 @@
 
 {% block headers %}
 	<link rel="stylesheet" href="{% static 'vue/app.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
 {% endblock %}
 {% block content_block %}
 <div id="main-wrapper">
